# ProjectBase

./: .gitignore  CMakeLists.txt  DOXYGEN_CONFIG_FILE  DOXYGEN_CONFIG_FILE_INTERNAL  DebugBuild.sh  DebugBuildWithOpencl.sh  Define.hpp  Doxyfile.private  Doxyfile.protect  Doxyfile.public  GenerateDoc.sh  README.md  RunAllTest.sh  boost_component_config  features.sh  vscode-tasks.in
algorithm/: CMakeLists.txt  Define.hpp  decision_tree.hpp
basic_algorithm/: CMakeLists.txt  Define.hpp  binary_tree.hpp  kd_tree.hpp  tree.hpp
basic_algorithm/basic_algorithm_test/: CMakeLists.txt  test_binary_tree.cc  test_tree.cc
basic_calculation/: CMakeLists.txt  Define.hpp  col2im.cmc  col2im.cpp  col2im.hpp  col2im_kernel.cu  im2col.cpp  im2col.hpp  im2col_kernel.cl  im2col_kernel.cu  img2col.cmc
basic_calculation/CAGD/poly/poly_test/: poly_test.cc
basic_calculation/basic_calculation_test/: CMakeLists.txt
cmake/: features.cmake
cmake_module/: CMakeLists.txt  ProjectBaseSet.cmake  VersionInfo.in  VersionResource.rc  add_binary.cmake  add_cu_module.cmake  add_module.cmake  add_target.cmake  common_project_configure.cmake  extract_information_from_git.cmake  file_operation.cmake  file_read_method.cmake  fold_operation.cmake  generate_version_rc.cmake  obj_name_provide.cmake  popular_message.cmake  test_engineer_config.cmake  version.cmake
codec/: CMakeLists.txt  Define.hpp  RLE.cpp  RLE.hpp  RunLengthCodec.hpp  codec.cpp  codec.hpp  test.cpp
codec/codec_test/: CMakeLists.txt  codec_test_codec.cc
config/: CMakeLists.txt  boost_component_config  qt5_component_config
cross_platform/: CMakeLists.txt  cross_platform.hpp  symbol.hpp  type.hpp  util_method.hpp
cu_ops/: CMakeLists.txt  test.cpp
cu_ops/yolo/: CMakeLIsts.txt  CMakeLists.txt  yolo.cu  yolov5.hh
cu_ops/yolo/Yolo_test/: CMakeLists.txt  yolo_test.cc
cu_ops/yolo/yolo_test/: CMakeLists.txt  yolo_test.cc
data/: Define.hpp  data.cpp  data_container.hpp
data_view/: Define.hpp
env_build/: DLBuild.sh  UbuntuBaseEnvDocker  UbuntuSystemToolsBuild.sh  a.server  install_bazel.sh  install_go.sh  install_ngrok.sh
external_process/: CMakeLists.forboost  CMakeLists.txt  GTest.cmake  OpenCL.cmake  README  absl.cmake  boost.cmake  ceres_solver.cmake  cmake_module_set.cmake  eigen.cmake  eigen3.cmake  external_setting.cmake  flatbuffers.cmake  gflags.cmake  glog.cmake  googleflags.cmake  googleflags_setting.cmake  googlelog.cmake  googletest.cmake  googletest_setting.cmake  gtest.cmake  oatpp.cmake  opencl_icd_loader.cmake  opencv.cmake  protobuf.cmake  qt.cmake  spdlog.cmake  tbb.cmake  vulkan.cmake  yaml.cmake
file_system/: CMakeLists.txt  Define.hpp  check_file.hpp
file_system/filesy_stem_test/: CMakeLists.txt
function/: CMakeLists.txt  Define.hpp  data.hpp  data_container.hpp  function.hpp  name.cpp  name.hpp  name_container.hpp
function_solution/: CMakeLists.txt  Define.hpp  function_graph.hpp
function_ui/: CMakeLists.txt  Define.hpp  data_ui.hpp
indicator/: CMakeLists.txt  (+3 more)
method/: CMakeLists.txt  Define.hpp  char_operation.hpp
method/method_test/: CMakeLists.txt  char_operation.cc
multi_language/: CMakeLists.txt  Define.hpp  multi_language.cpp  multi_language.hpp
opencl_base/: CMakeLists.txt
opencl_base/device_info/: CMakeLists.txt  device_info.cc
opencl_base/opencl_base_test/: CMakeLists.txt
play_with_now_code/: CMakeLists.txt  calc_the_time.cc  drop_the_least.cc  fariest_split.cc  permutation.cc  play_with_now_code.cc
plugin_manager/: CMakeLists.txt  Define.hpp  plugin_manager.h  plugin_manager.hpp
plugin_manager/plugin_manager_test/: CMakeLists.txt  plugin_manager_test.cc  test.cc
tensor/: CMakeLists.txt  Define.hpp  array_buffer.hpp  inner_tensor.cc  inner_tensor.h  tensor.cpp  tensor.hpp  tensor_shape.hpp  tensor_type.hpp
tensor/tensor_test/: CMakeLists.txt  tensor_test.cc
test/: CMakeLists.txt
test/program_anywhere/: CMakeLists.txt  HuaWeiTest.cc  dynamic_planning.cc  program_anywhere.cc  test_lambda.cc
test/program_opencl/: CImg.h  CMakeLists.txt  Utils.h  Utils.hh  program_opencl.cc  test_filter.cc
test/program_opencl/kernel/: test_filter.cl
test/test_cmake_module/: CMakeLists.txt
test/test_cmake_module/test_popular_message/: CMakeLists.txt
test/test_cuda/: CMakeLists.txt  culib2.cu  kernel-ptx-cubin.cu  kernel.cu  kernel.cuh  kernel2.cu  test_cuda.cpp  test_cuda.hpp
test/test_external_process/script/: README.md  run_test.sh
test/test_external_process/test_absl/: CMakeLists.txt  test_absl.cpp
test/test_external_process/test_boost/: .gitignore  CMakeLists.txt  app.cpp  build.sh  test_boost.cpp
test/test_external_process/test_eigen/: CMakeLists.txt  test_eigen.cpp
test/test_external_process/test_flatbuffers/: CMakeLists.txt  main.cpp
test/test_external_process/test_googleflags/: CMakeLists.txt  test_gflags.cpp
test/test_external_process/test_googlelog/: CMakeLists.txt  test_googlelog.cpp
test/test_external_process/test_googletest/: CMakeLists.txt  test_googletest.cpp
test/test_external_process/test_oat/: CMakeLists.txt  main.cpp
test/test_external_process/test_opencl_icd_loader/: CMakeLists.txt  test_opencl_icd_loader.cpp
test/test_external_process/test_opencv/: CMakeLists.txt  DebugBuild.sh  test_opencv.cpp
test/test_external_process/test_protobuf/: CMakeLists.txt  DebugBuild.sh
test/test_external_process/test_qt/: .gitignore  CMakeLists.txt
test/test_external_process/test_spdlog/: CMakeLists.txt  test_spdlog.cpp
test/test_external_process/test_yamlcpp/: CMakeLists.txt
test/test_gtest/: CMakeLists.txt  test_gtest.cc  test_gtest_param.cc
test/test_tbb/: CMakeLists.txt
test/test_tensorflow/: CMakeLists.txt  tensorflow_base_operation.h  test_gpu_resources.cc  test_tensorflow.cc
test/test_tensorflow/model/base_model/: checkpoint  model_test.data-00000-of-00001  model_test.index
test/test_ui_style_config/: CMakeLists.txt  test_ui_style_config.cc
ui_style_config/: CMakeLists.txt  Define.hpp  ui_style_config.hpp
unified_type/: CMakeLists.txt  Define.hpp  type.hpp
util/util_test/: CMakeLists.txt  test_quick_sort.cc  util_test.cc
(+41 files in other folders)
