add_subdirectory(test_ui_style_config)
add_subdirectory(test_cmake_module)
add_subdirectory(test_gtest)
add_subdirectory(test_tensorflow)
add_subdirectory(program_anywhere)
add_subdirectory(test_opencv)
if(OPENCL)
    add_subdirectory(program_opencl)
endif()

if(project_base_using_tbb)
    add_subdirectory(test_tbb)
endif()